--- a/styles.css
+++ b/styles.css
@@ -16,9 +16,12 @@ nav{
     display: flex;
     justify-content: space-around;
     gap: 20px;
+    height: 70px;
     align-items: center;
     font-size: 18px;
     color: #E5E7EB;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 .Segment1 {
@@ -35,6 +38,7 @@ nav{
 .logo {
     font-weight: bolder;
     font-size: 24px;
+    margin-right: auto;
 }
 
 .sub1 {
@@ -54,5 +58,119 @@ nav{
 
 }
 
+.random {
+    color: Black;
+    height: 370px;
+    width: 960px;
+    margin: auto;
+}
 
+.title {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    display: flex;
+    justify-content: center;
+    height: 100px;
+    align-items: center;
+}
 
+.imgs {
+    width: 150px;
+    border-radius: 10px;
+}
+
+.elements {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.eles {
+    width: 150px;
+    text-align: center;
+}
+
+.grey {
+    background-color: #E5E7EB;
+    height: 370px;
+    width: 960px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.quote {
+width: 650px;
+}
+
+.phrase {
+font-size: 30px;
+font-style: italic;
+font-weight: lighter;
+color: #1F2937;
+}
+
+.grey .author {
+    font-size: 20px;
+    display: flex;
+    font-style: normal;
+    font-weight: bolder;
+    justify-content: flex-end;
+}
+
+.final {
+    width: 960px;
+    height: 200px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.cta-container {
+    background-color: #3882F6;
+    color: whitesmoke;
+    border-radius: 7px;
+    width: 780px;
+    height: 100px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+
+.signup2 {
+    background-color: #3882F6;
+    color: white;
+    font-size: 18px;
+    font-weight: bolder;
+    border-radius: 10px;
+    width: 100px;
+    height: 40px;
+    border: 2px white solid;
+}
+
+.cta-text {
+    font-weight: bolder;
+}
+
+.subtext2 {
+    font-weight: lighter;
+}
+
+footer {
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1F2937;
+    color: white;
+    font-weight: bold;
+    height: 90px;
+    width: 960px;
+}
